# blog-builder-dutch

./: README.md  pyproject.toml
azure-speech-to-tex/: beton_0_7_min.json  beton_0_7_min.txt  notebook.ipynb
notebooks/: hf.py  hugging-face-summarrization.ipynb
