[tool.poetry]
name = "blog-builder-dutch"
version = "0.1.0"
description = ""
authors = ["vincent <vclaes1986@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
transformers = "^4.22.2"
torch = "^1.12.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
